apps/docs-sync/manifests/service-aws-sigv4-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-sigv4-proxy
  namespace: secrets
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: aws-sigv4-proxy
  namespace: secrets
subsets:
  - addresses:
      # ClusterIP of aws-sigv4-proxy in secrets cluster (shared serviceCIDR)
      - ip: 10.96.80.126
    ports:
      - port: 80
        protocol: TCP
